--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Mustafa Mohamed</title>
+        <title>Mohamed Elmustafa</title>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="/assets/browser_icon.png">
         <script src="main.js"></script>
@@ -11,7 +11,7 @@
         <div id="Background">
             <img id="Logo" src="/assets/Logo.png" alt="Logo">
             <p id="Hello">Hello, my name is</p>
-            <h1 id="Name">Mustafa Mohamed.</h1>
+            <h1 id="Name">Mohamed Elmustafa.</h1>
             <p id="Description">I’m a second-year student majoring in Mathematical Sciences with <br>a primary focus in Computer Science. In my free time, I like <br>creating bots, playing video games, and learning new things.
             </p>
             <a id ="Work" href="https://github.com/mstafam" target="_blank" onmouseover="mouseOver('Work')" onmouseout="mouseOut('Work')">Stuff I've done</a>
